<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pozyx_listener</name>
  <version>0.0.0</version>
  <description>Simple Package to get position Data from pozyx Access point</description>
  <maintainer email="koroyeldiores@gmail.com">melchior</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>serial</depend>
  <depend>std_msg.msg</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
